# AI-Powered-Music-Visualizer-Editor

./: .gitignore  CMakeLists.txt  README  launch.bat  launch.sh  main.py
src/cpp/: analyzer_client.h  main.cpp
src/python/: analysis_server.py  audio_analyzer.py  mood_classifier.py
